PPA-02/BUG: Corrigindo problema na hora de pegar o txid, teste com código qr real.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: postgres
     container_name: pix-payment-db
     environment:
-      POSTGRES_DB: pix-payment-db
+      POSTGRES_DB: pix_payment_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
